[gd_scene load_steps=46 format=2]

[ext_resource path="res://Assets/6523-adept-chu-hua-of-the-mount-nobg.png" type="Texture" id=1]
[ext_resource path="res://Assets/WALL.png" type="Texture" id=2]
[ext_resource path="res://Assets/GROUND.png" type="Texture" id=3]
[ext_resource path="res://DungeonMovement.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://Assets/Font/alagard.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Scenes/Effects/FCTManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/TestGround.png" type="Texture" id=9]
[ext_resource path="res://Minimap.gd" type="Script" id=10]
[ext_resource path="res://Assets/Audio/Music/8bit Dungeon Level.wav" type="AudioStream" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 50, 0, 50, 50, 0, 50 )

[sub_resource type="TileSet" id=2]
1/name = "Floor2"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 50, 50 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Wall"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 50, 50 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 1 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Floor"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 50, 50 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "attack_down"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.056414, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -5 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.44 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_left"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_right"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.159719, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.46 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_up"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.49 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 23, 23 )

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=14]

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="Animation" id=16]
resource_name = "attack_down"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.056414, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -5 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.44 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "attack_left"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.44 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=18]
resource_name = "attack_right"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.159719, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.41 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "attack_up"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.47 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=22]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=23]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=24]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 31.2195, 31.2195 )

[sub_resource type="Animation" id=26]
resource_name = "attack_down"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.056414, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -5 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.44 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "attack_left"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.44 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "attack_right"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.159719, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 40, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.41 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=29]
resource_name = "attack_up"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0543763, 0.161757, 0.349688 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.47 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=30]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=31]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=32]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=33]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=34]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[node name="Dungeon" type="Node2D"]
script = ExtResource( 6 )

[node name="Terrain" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 50, 50 )
collision_layer = 2
format = 1

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 175, 225 )
z_index = 1
script = ExtResource( 4 )
wizzyID = 1246

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Sprite"]
anims/attack_down = SubResource( 3 )
anims/attack_left = SubResource( 4 )
anims/attack_right = SubResource( 5 )
anims/attack_up = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/walk_down = SubResource( 8 )
anims/walk_left = SubResource( 9 )
anims/walk_right = SubResource( 10 )
anims/walk_up = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 12 )

[node name="Rays" type="Node2D" parent="Player"]

[node name="RayDown" type="RayCast2D" parent="Player/Rays"]
enabled = true
collision_mask = 6

[node name="RayLeft" type="RayCast2D" parent="Player/Rays"]
rotation = 1.5708
enabled = true
collision_mask = 6

[node name="RayUp" type="RayCast2D" parent="Player/Rays"]
rotation = 3.14159
enabled = true
collision_mask = 6

[node name="RayRight" type="RayCast2D" parent="Player/Rays"]
rotation = 4.71239
enabled = true
collision_mask = 6

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Label" type="Label" parent="Player/Camera2D"]
margin_left = -220.0
margin_top = -216.0
margin_right = -147.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 13 )
text = "FLOOR:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Player/Camera2D"]
margin_left = -163.0
margin_top = -216.0
margin_right = -90.0
margin_bottom = -201.0
theme = SubResource( 15 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.988235, 0.290196, 0.0313726, 1 )
text = "1st"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Player/Camera2D"]
margin_left = -111.0
margin_top = -217.0
margin_right = -38.0
margin_bottom = -202.0
custom_fonts/font = SubResource( 13 )
text = "Lv"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Player/Camera2D"]
margin_left = -64.0
margin_top = -218.0
margin_right = 9.0
margin_bottom = -203.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.984314, 0.447059, 0.160784, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Player/Camera2D"]
margin_left = -5.0
margin_top = -216.0
margin_right = 68.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 13 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="Player/Camera2D"]
margin_left = 31.0
margin_top = -216.0
margin_right = 104.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.184314, 1, 0.290196, 1 )
text = "60/60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="Control" parent="Player/Camera2D"]
margin_left = 103.0
margin_top = -112.0
margin_right = 310.0
margin_bottom = 38.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_node = NodePath("..")
tilemap_nodes = [ NodePath("../../../Terrain") ]
cell_colors = {
0: Color( 0.698039, 0.988235, 0.12549, 1 ),
1: Color( 0.984314, 0.388235, 0.388235, 1 ),
2: Color( 0, 0, 0, 0.572549 ),
3: Color( 0.870588, 0.788235, 0.329412, 1 )
}
zoom = 3.0

[node name="FCTManager" parent="Player" instance=ExtResource( 8 )]

[node name="Enemy" type="KinematicBody2D" parent="." groups=[
"enemy",
]]
position = Vector2( 225, 125 )
collision_layer = 4
script = ExtResource( 4 )
enemy = true
wizzyID = 3202
player = false
max_hp = 10

[node name="Sprite" type="Sprite" parent="Enemy"]
texture = ExtResource( 5 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy/Sprite"]
anims/attack_down = SubResource( 16 )
anims/attack_left = SubResource( 17 )
anims/attack_right = SubResource( 18 )
anims/attack_up = SubResource( 19 )
anims/idle = SubResource( 20 )
anims/walk_down = SubResource( 21 )
anims/walk_left = SubResource( 22 )
anims/walk_right = SubResource( 23 )
anims/walk_up = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
scale = Vector2( 0.640625, 0.640625 )
shape = SubResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rays" type="Node2D" parent="Enemy"]

[node name="RayDown" type="RayCast2D" parent="Enemy/Rays"]
enabled = true
collision_mask = 7

[node name="RayLeft" type="RayCast2D" parent="Enemy/Rays"]
rotation = 1.5708
enabled = true
collision_mask = 7

[node name="RayUp" type="RayCast2D" parent="Enemy/Rays"]
rotation = 3.14159
enabled = true
collision_mask = 7

[node name="RayRight" type="RayCast2D" parent="Enemy/Rays"]
rotation = 4.71239
enabled = true
collision_mask = 7

[node name="FCTManager" parent="Enemy" instance=ExtResource( 8 )]

[node name="Enemy2" type="KinematicBody2D" parent="." groups=[
"enemy",
]]
position = Vector2( 75, 225 )
collision_layer = 4
script = ExtResource( 4 )
enemy = true
wizzyID = 5896
enemyID = 1
player = false
max_hp = 10

[node name="Sprite" type="Sprite" parent="Enemy2"]
texture = ExtResource( 5 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy2/Sprite"]
anims/attack_down = SubResource( 26 )
anims/attack_left = SubResource( 27 )
anims/attack_right = SubResource( 28 )
anims/attack_up = SubResource( 29 )
anims/idle = SubResource( 30 )
anims/walk_down = SubResource( 31 )
anims/walk_left = SubResource( 32 )
anims/walk_right = SubResource( 33 )
anims/walk_up = SubResource( 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2"]
scale = Vector2( 0.640625, 0.640625 )
shape = SubResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rays" type="Node2D" parent="Enemy2"]

[node name="RayDown" type="RayCast2D" parent="Enemy2/Rays"]
enabled = true
collision_mask = 7

[node name="RayLeft" type="RayCast2D" parent="Enemy2/Rays"]
rotation = 1.5708
enabled = true
collision_mask = 7

[node name="RayUp" type="RayCast2D" parent="Enemy2/Rays"]
rotation = 3.14159
enabled = true
collision_mask = 7

[node name="RayRight" type="RayCast2D" parent="Enemy2/Rays"]
rotation = 4.71239
enabled = true
collision_mask = 7

[node name="FCTManager" parent="Enemy2" instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
